app-deployments/landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  namespace: landing-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - xtemplate.tail9d78f5.ts.net
  rules:
    - host: xtemplate.tail9d78f5.ts.net
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: landing-svc
                port:
                  name: http
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: landing-svc
                port:
                  name: http
